--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,15 @@ dependencies:
   provider: ^6.0.0
   flutter_typeahead: ^3.2.0
   font_awesome_flutter: ^9.1.0
+  cupertino_icons: ^1.0.2
+  animated_splash_screen: ^1.1.0
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
