--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.1.0
+  fluttertoast: ^8.0.8
   flutter:
     sdk: flutter
 
